<resources>
    <string name="app_name">FoodPlanner</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="slogan">"Munch your way\nthrough the week"</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Log In</string>
    <string name="create_account">Create Account</string>
    <string name="email_label">Email Address</string>
    <string name="email_hint">hello@example.com</string>
    <string name="password_label">Password</string>
    <string name="password_hint">******</string>
    <string name="username">Username</string>
    <string name="username_hint">alaa7</string>
    <string name="remember_me">Remember me</string>
    <string name="signup">Sign Up</string>
    <string name="welcome">Welcome Back</string>
    <string name="signup_with_externals">OR CONTINUE WITH</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="forget_password">Forget Password?</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="welcome_user">Welcome Alaa</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="meal_of_the_day">Meal Of the Day!</string>
    <string name="categories">Categories</string>
    <string name="guest">Continue as a guest?</string>
    <string name="category_type">Beef</string>
    <string name="search">Search</string>
    <string name="ingredients">Ingredients</string>
    <string name="instructions">Instructions</string>
    <string name="weekly_planner">Weekly Planner</string>
    <string name="slogan_2">Munch your way through the week</string>
    <string name="client_id">736743686590-49spjmtljt66g2jda88sn4o4gbpchd1q.apps.googleusercontent.com</string>
    <string name="twitter_consumer_key">uUEcLe4WAnY4EP8HdzGX74Ahk</string>
    <string name="twitter_consumer_secret">XZyJ8YTMmxVwZcz3MAsmSxubqPkCstLZerUCLTvXYjDNqGGPY2</string>
</resources>