<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.signup.SignUpFragment">

    <TextView
        android:id="@+id/create_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:paddingTop="@dimen/spacing_small"
        android:text="@string/welcome"
        android:textColor="@color/primaryColor"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/username_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_small"
        android:fontFamily="@font/poppins_semibold"
        android:letterSpacing="0.05"
        android:text="@string/username"
        android:textColor="@color/navyBlueVariant"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/create_account" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/username_text_input_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_small"
        app:boxBackgroundColor="@color/lightGrayVariant"
        app:boxBackgroundMode="outline"
        app:boxCornerRadiusBottomEnd="@dimen/dp_32"
        app:boxCornerRadiusBottomStart="@dimen/dp_32"
        app:boxCornerRadiusTopEnd="@dimen/dp_32"
        app:boxCornerRadiusTopStart="@dimen/dp_32"
        app:boxStrokeColor="@color/text_input_stroke"
        app:boxStrokeWidth="2dp"
        app:boxStrokeWidthFocused="2dp"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@+id/username_label">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="10dp"
            android:fontFamily="@font/poppins"
            android:hint="@string/username_hint"
            android:textColorHint="@color/lightGray"
            android:textSize="14sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/password_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_medium"
        android:fontFamily="@font/poppins_semibold"
        android:letterSpacing="0.05"
        android:text="@string/password_label"
        android:textColor="@color/navyBlueVariant"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/username_text_input_login" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_text_input_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_small"
        app:boxBackgroundColor="@color/lightGrayVariant"
        app:boxBackgroundMode="outline"
        app:boxCornerRadiusBottomEnd="@dimen/dp_32"
        app:boxCornerRadiusBottomStart="@dimen/dp_32"
        app:boxCornerRadiusTopEnd="@dimen/dp_32"
        app:boxCornerRadiusTopStart="@dimen/dp_32"
        app:boxStrokeColor="@color/text_input_stroke"
        app:boxStrokeWidth="2dp"
        app:boxStrokeWidthFocused="2dp"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@+id/password_label">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/icon_password"
            android:drawablePadding="10dp"
            android:fontFamily="@font/poppins"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:textColorHint="@color/lightGray"
            android:textSize="14sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/remember_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_small"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:button="@drawable/checkbox_circular"
        android:fontFamily="@font/poppins"
        android:paddingStart="4dp"
        android:text="@string/remember_me"
        android:textColor="@color/navyBlueVariant"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@+id/password_text_input_login" />

    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:text="@string/forget_password"
        android:textColor="@color/primaryColor"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/remember_checkbox"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintTop_toTopOf="@+id/remember_checkbox" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/signupBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_medium"

        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:text="@string/login"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        app:backgroundTint="@color/primaryColor"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@+id/remember_checkbox" />
    <View
        android:id="@+id/line_left"
        android:layout_width="60dp"
        android:layout_height="2dp"
        android:layout_marginEnd="5dp"
        android:alpha="0.6"
        android:background="@color/lightGray"
        app:layout_constraintEnd_toStartOf="@+id/tv_slogan"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_slogan"
        app:layout_constraintBottom_toBottomOf="@id/tv_slogan"
        />

    <TextView
        android:id="@+id/tv_slogan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_medium"
        android:fontFamily="@font/poppins"
        android:text="@string/signup_with_externals"
        android:textColor="@color/lightGray"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/line_right"
        app:layout_constraintStart_toEndOf="@+id/line_left"
        app:layout_constraintTop_toBottomOf="@+id/signupBtn" />

    <View
        android:id="@+id/line_right"
        android:layout_width="60dp"
        android:layout_height="2dp"
        android:layout_marginStart="5dp"
        android:alpha="0.6"
        android:background="@color/lightGray"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_slogan"
        app:layout_constraintTop_toTopOf="@id/tv_slogan"
        app:layout_constraintBottom_toBottomOf="@id/tv_slogan" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/facebookBtn"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/spacing_small"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/facebook"
        android:textAllCaps="false"
        android:textColor="@color/navyBlueVariant"
        android:textSize="12sp"
        app:backgroundTint="@android:color/transparent"
        app:cornerRadius="24dp"
        app:icon="@drawable/icon_facebook"
        app:iconGravity="textStart"
        app:iconPadding="4dp"
        app:iconSize="24dp"
        app:iconTint="@null"
        app:layout_constraintEnd_toStartOf="@+id/googleBtn"
        app:layout_constraintStart_toStartOf="@id/line_left"
        app:layout_constraintTop_toBottomOf="@+id/tv_slogan"
        app:strokeColor="@color/lightGray"
        app:strokeWidth="1dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/googleBtn"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/spacing_large"
        android:layout_marginTop="@dimen/spacing_small"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/google"
        android:textAllCaps="false"
        android:textColor="@color/navyBlueVariant"
        android:textSize="12sp"
        app:backgroundTint="@android:color/transparent"
        app:cornerRadius="24dp"
        app:icon="@drawable/icon_google"
        app:iconGravity="textStart"
        app:iconPadding="4dp"
        app:iconSize="24dp"
        app:iconTint="@null"
        app:layout_constraintStart_toEndOf="@+id/facebookBtn"
app:layout_constraintEnd_toEndOf="@id/line_right"
        app:layout_constraintTop_toBottomOf="@+id/tv_slogan"
        app:strokeColor="@color/lightGray"
        app:strokeWidth="1dp" />



    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="35dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="35dp" />
</androidx.constraintlayout.widget.ConstraintLayout>