<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"

    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:backgroundTint="@color/backgroundLight"
    android:fitsSystemWindows="true"
    tools:context=".ui.home.HomeFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="10dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="10dp" />

    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_medium"
        android:fontFamily="@font/poppins"
        android:text="@string/welcome_user"
        android:textColor="@color/primaryColor"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/mealOfTheDay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_small"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/meal_of_the_day"
        android:textColor="@color/primaryColor"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/welcome" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/random_meal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="24dp"
        app:cardElevation="4dp"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/mealOfTheDay"
        app:strokeColor="@color/primaryColor"
        app:strokeWidth="5dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/mealImage"
                android:layout_width="0dp"
                android:layout_height="320dp"
                android:scaleType="centerCrop"
                android:src="@drawable/splash_bg"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/gradientOverlay"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@drawable/gradient_overlay"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/tag1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_medium"
                android:layout_marginBottom="@dimen/spacing_small"
                android:background="@drawable/yellow_tag"
                android:paddingStart="12dp"
                android:paddingTop="6dp"
                android:paddingEnd="12dp"
                android:paddingBottom="6dp"
                android:text=""
                android:textColor="#006D5B"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/mealTitle"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/tag2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_small"
                android:background="@drawable/yellow_tag"
                android:paddingStart="12dp"
                android:paddingTop="6dp"
                android:paddingEnd="12dp"
                android:paddingBottom="6dp"
                android:text=""
                android:textColor="#8B4513"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/tag1"
                app:layout_constraintStart_toEndOf="@id/tag1"
                app:layout_constraintTop_toTopOf="@id/tag1" />




            <TextView
                android:id="@+id/mealTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_medium"
                android:layout_marginEnd="@dimen/spacing_medium"
                android:layout_marginBottom="@dimen/spacing_large"
                android:fontFamily="@font/poppins_bold"
                android:lineSpacingExtra="2dp"
                android:text="Avocado Taco Salad"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_medium"

        android:fontFamily="@font/poppins_bold"
        android:text="@string/categories"
        android:textColor="@color/primaryColor"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/random_meal" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/categories_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@id/textView"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        android:orientation="horizontal"
        tools:listitem="@layout/item_category"/>


</androidx.constraintlayout.widget.ConstraintLayout>